--- a/slides.html
+++ b/slides.html
@@ -212,7 +212,7 @@ GHCi, version 7.6.3: http://www.haskell.org/ghc/  :? for help
 Loading package ghc-prim ... linking ... done.
 Loading package integer-gmp ... linking ... done.
 Loading package base ... linking ... done.
-Prelude> :l functions.hs 
+Prelude> :l functions.hs
 [1 of 1] Compiling Main             ( functions.hs, interpreted )
 Ok, modules loaded: Main.
 Main> addOne 1
@@ -261,7 +261,7 @@ isTeodor navn     = False
 
 --
 
-... men vi bruker jo ikke ``navn``. _ matcher alt.
+... men vi bruker jo ikke ``navn``. ``_`` matcher alt.
 
 ```haskell
 isTeodor "Teodor" = True
