--- a/index.html
+++ b/index.html
@@ -825,7 +825,15 @@ Main> filter' (>9000) [10,100,1000,10000]
 *Main> filter' (\y -> y > minimumAcceptablePartneAge 23) [13..25]
 [19.0,20.0,21.0,22.0,23.0,24.0,25.0]
 ```
+
+"Hvorfor alder / 2 + 7?" Se [xkcd 314]
+[xkcd 314]: https://xkcd.com/314/
+
 --
+
+.
+
+Tilbake på sak.
 Kanskje har dere fått noe sånt?
 
 ```haskell
