Fiks lenke til ordboka

--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@ Ulikt alt annet du har sett
 
   - Altså en *gruppering av instruksjoner (befalinger)*
 
-.footnote[**imperativ** *m1* ``av lat imperare 'befale, byde'`` [[1](http://www.nob-ordbok.uio.no/perl/ordbok.cgi?OPP=imperativ&bokmaal=+&ordbok=begge)]]
+.footnote[**imperativ** *m1* ``av lat imperare 'befale, byde'`` [[1](https://ordbokene.no/bm/25912)]]
 --
 
 ```java
